...
            children: [
              Align(
                alignment: AlignmentDirectional(0.0, 0.0),
                child: ClipRRect(
                  borderRadius: BorderRadius.circular(8.0),
                  child: Image.asset(
                    key: ValueKey('Image_r9xi'),
                    'assets/images/logoPro.png',
                    width: 133.4,
                    fit: BoxFit.contain,
                  ),
                ),
              ),
...
                        indicatorColor: Color(0xFFDBA6A6),
                        tabs: [
                          Tab(
                            text: 'Signup',
                          ),
                          Tab(
                            key: ValueKey('Tab_yws6'),
                            text: 'Login',
                          ),
                        ],
                        controller: _model.tabBarController,
                        onTap: (i) async {
                          [() async {}, () async {}][i]();
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'Signup-email_in9u'),
                                                  controller: _model
                                                      .signupEmailTextController,
                                                  focusNode: _model
                                                      .signupEmailFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'password_Create_yy0q'),
                                                  controller: _model
                                                      .passwordCreateTextController,
                                                  focusNode: _model
                                                      .passwordCreateFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'password_CreateConfirm_rxko'),
                                                  controller: _model
                                                      .passwordCreateConfirmTextController,
                                                  focusNode: _model
                                                      .passwordCreateConfirmFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  0.0, 0.0),
                                              child: Padding(
                                                padding: EdgeInsetsDirectional
                                                    .fromSTEB(
                                                        0.0, 0.0, 0.0, 8.0),
                                                child: FFButtonWidget(
                                                  key: ValueKey('Button_ybnp'),
                                                  onPressed: () async {
                                                    logFirebaseEvent(
                                                        'LOGIN_PAGE_SIGNUP_BTN_ON_TAP');
                                                    logFirebaseEvent(
                                                        'Button_auth');
                                                    GoRouter.of(context)
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'emailAddress_Login_dk5y'),
                                                  controller: _model
                                                      .emailAddressLoginTextController,
                                                  focusNode: _model
                                                      .emailAddressLoginFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  .fromSTEB(
                                                      0.0, 0.0, 0.0, 16.0),
                                              child: Container(
                                                width: double.infinity,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'password_Login_v282'),
                                                  controller: _model
                                                      .passwordLoginTextController,
                                                  focusNode: _model
                                                      .passwordLoginFocusNode,
                                                  autofocus: true,
                                                  autofillHints: [
...
                                                  0.0, 0.0),
                                              child: Padding(
                                                padding: EdgeInsetsDirectional
                                                    .fromSTEB(
                                                        0.0, 0.0, 0.0, 8.0),
                                                child: FFButtonWidget(
                                                  key: ValueKey('Button_s149'),
                                                  onPressed: () async {
                                                    logFirebaseEvent(
                                                        'LOGIN_PAGE_LOG_IN_BTN_ON_TAP');
                                                    logFirebaseEvent(
                                                        'Button_auth');
                                                    GoRouter.of(context)
...
