...
                            Icons.logout_outlined,
                            color: FlutterFlowTheme.of(context).primaryText,
                            size: 24.0,
                          ),
                        ),
                        Text(
                          'Log Out',
                          style:
                              FlutterFlowTheme.of(context).bodyMedium.override(
                                    font: GoogleFonts.inter(
                                      fontWeight: FlutterFlowTheme.of(context)
                                          .bodyMedium
                                          .fontWeight,
...
                                          }

                                          final calendarItemCalendarRecord =
                                              snapshot.data!;

                                          return Container(
                                            key: ValueKey('calendarItem_si15'),
                                            child: wrapWithModel(
                                              model: _model.calendarItemModels
                                                  .getModel(
                                                itemsListIndex.toString(),
                                                itemsListIndex,
                                              ),
...
                  Align(
                    alignment: AlignmentDirectional(0.0, 0.0),
                    child: Padding(
                      padding:
                          EdgeInsetsDirectional.fromSTEB(0.0, 0.0, 0.0, 45.0),
                      child: FlutterFlowIconButton(
                        key: ValueKey('IconButton_yxdf'),
                        borderRadius: 8.0,
                        buttonSize: 40.0,
                        fillColor: FlutterFlowTheme.of(context).secondary,
                        icon: Icon(
                          Icons.add_rounded,
                          color: FlutterFlowTheme.of(context).info,
...
