...
                                        ),
                                      ),
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            12.0, 0.0, 12.0, 32.0),
                                        child: FFButtonWidget(
                                          key: ValueKey('Button_nqdt'),
                                          onPressed: () async {
                                            logFirebaseEvent(
                                                'AI_PAGE_PAGE_SEND_TO_CAL_BTN_ON_TAP');
                                            logFirebaseEvent(
                                                'Button_update_page_state');
                                            _model.addToPromptList(
...
